--- a/template/index.html
+++ b/template/index.html
@@ -57,7 +57,7 @@
 	</div><!-- #header-->
 	<div id="content">
 		<div class="CenterLayout padding-10">
-			  <div id="imagesLoad">
+			  <div id="imagesLoad" class="masonry">
 				
 		   
 		    
