--- a/template/slider.html
+++ b/template/slider.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/js/jquery.masonry.min.js"></script>
-	<script src="../js/modernizr-transitions.js"></script>
+	<script src="/js/modernizr-transitions.js"></script>
 	<script type="text/javascript" src="/js/main.js"></script>
 	<!--[if lte IE 6]><link rel="stylesheet" href="style_ie.css" type="text/css" media="screen, projection" /><![endif]-->
 </head>
@@ -116,8 +116,8 @@
 </div><!-- #wrapper -->
 <div class="clear"></div>
 <div id="footer">
-	<div class="CenterLayout padding-10 black-80 radius">
-			dfgdfgdfg
+	<div class="CenterLayout black-80 radius">
+		<div class="padding-10" style="padding:20px"><p>&copy 2012, <a href="http://www.flickr.com/">flickr.com</a>, <a href="http://instagram.com/">instagram.com</a>, <a href="http://images.google.com/">images.google.com/</a></p></div>
 	</div>
 </div><!-- #footer -->
 
