Add images and main page

--- a/djangodash2012/templates/base.html
+++ b/djangodash2012/templates/base.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
     <script type="text/javascript" src="{% static 'js/jquery.masonry.min.js'%}"></script>
     <script type="text/javascript" src="{% static 'js/main.js'%}"></script>
+    <script type="text/javascript" src="{% static 'js/modernizr-transitions.js'%}"></script>
     <!--[if lte IE 6]><link rel="stylesheet" href="{% static 'css/style_ie.css' %}" type="text/css" media="screen, projection" /><![endif]-->
     <script type="text/javascript" src="http://userapi.com/js/api/openapi.js?52"></script>
     <!--LiveInternet counter--><script type="text/javascript"><!--
