--- a/djangodash2012/staticfiles/css/style.css
+++ b/djangodash2012/staticfiles/css/style.css
@@ -10,7 +10,8 @@ body {
 	font: 12px/18px Arial, Tahoma, Verdana, sans-serif;
 	height: 100%;
 	background: url('../images/background.png');
-	overflow-x:hidden
+	overflow-x:hidden;
+	color:#fff;
 }
 a {
 	color: blue;
@@ -30,13 +31,13 @@ input {
 	vertical-align: middle;
 }
 span.photo{
-	border-radius:0 !important; 
+	border-radius:0 !important;
 	background: url('../images/photo.png') left center no-repeat;
-	padding: 7px 0px 7px 20px !important; 
+	padding: 7px 0px 7px 20px !important;
 }
 span.view{
 	background: url('../images/view.png') left center no-repeat;
-	padding: 7px 12px 7px 20px !important; 
+	padding: 7px 12px 7px 20px !important;
 }
 .padding-10{padding:10px}
 .margin-10{margin:10px}
@@ -183,7 +184,7 @@ span.view{
 	color:#FFF;
 	background: url('../images/black-80.png');
 	font-size:70px;
-	display:inline-block;	
+	display:inline-block;
 	margin-right:10px;
 	text-transform: uppercase;
 	font-family: 'PT Sans Narrow';
@@ -196,6 +197,15 @@ span.view{
 	margin-bottom: 10px;
 	min-width: 1000px;
 	position: relative;
+}
+
+.CenterLayout h1.caption{
+	font-size:36px;
+	margin-bottom:20px;
+	margin-top:20px;
+	text-transform: uppercase;
+	font-family: 'PT Sans Narrow';
+	color:#fff;
 }
 
 .slider {
@@ -313,6 +323,7 @@ span.view{
 	-moz-border-radius: 0 0 10px 10px;
 	border-radius: 0 0 10px 10px;
 	position:relative;
+	overwlow:hidden
 }
 
 #imagesLoad .imagesPanel a.caption{
@@ -325,6 +336,7 @@ span.view{
 }
 
 #imagesLoad .imagesPanel h3{
+	height:10px;
 	float:left;
 	font-size:16px;
 	text-transform: uppercase;
@@ -359,7 +371,7 @@ span.view{
 	text-shadow: 0 -1px 1px #127000;
 
 padding:8px
-	
+
 }
 #imagesLoad .imagesPanel .vote a.up{
 	background: url('../images/up.png') no-repeat;
@@ -392,4 +404,36 @@ padding:8px
 	display: inline-block;
 	text-align:center;
 	vertical-align:middle
+}
+
+
+
+
+/* masonry
+-----------------------------------------------------------------------------*/
+
+
+.masonry,
+.masonry .masonry-brick {
+  -webkit-transition-duration: 0.7s;
+     -moz-transition-duration: 0.7s;
+      -ms-transition-duration: 0.7s;
+       -o-transition-duration: 0.7s;
+          transition-duration: 0.7s;
+}
+
+.masonry {
+  -webkit-transition-property: height, width;
+     -moz-transition-property: height, width;
+      -ms-transition-property: height, width;
+       -o-transition-property: height, width;
+          transition-property: height, width;
+}
+
+.masonry .masonry-brick {
+  -webkit-transition-property: left, right, top;
+     -moz-transition-property: left, right, top;
+      -ms-transition-property: left, right, top;
+       -o-transition-property: left, right, top;
+          transition-property: left, right, top;
 }
