--- a/djangodash2012/templates/about.html
+++ b/djangodash2012/templates/about.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
 {% block title %}About MiraclesLive{% endblock %}
 {% block content %}
-    <p>MiraclesLive is a visual composition existing miracles of the world based on tag search in instagram, flickr and google images.</p>
 
-    <p>Code for Djangodash // From Ufa, Russia</p>
+    <div class="CenterLayout">
+        <div style="padding:0 15px">
+            <h1 class="caption">About</h1>
+            <p>MiraclesLive is a visual composition existing miracles of the world based on tag search in instagram, flickr and google images.</p>
+
+            <p>Code for Djangodash // From Ufa, Russia</p>
+        </div>
+    </div>
 {% endblock %}
