--- a/djangodash2012/templates/main.html
+++ b/djangodash2012/templates/main.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <div class="CenterLayout padding-10">
-    <div id="imagesLoad">
+    <div id="mainBody" class="imagesBody">
         {% for miracle in miracles %}
             <div class="box-2 float-left">
                 <div class="imagesPanel black-50 radius-top" style="text-align:center;">
