--- a/djangodash2012/templates/miracle.html
+++ b/djangodash2012/templates/miracle.html
@@ -18,16 +18,9 @@
                 <div class="slider"></div>
                 <ul>
                     <li>Today</li>
-                    <li>2000</li>
-                    <li>1990</li>
-                    <li>1980</li>
-                    <li>1970</li>
-                    <li>1960</li>
-                    <li>1950</li>
-                    <li>1940</li>
-                    <li>1930</li>
-                    <li>1920</li>
-                    <li>1910</li>
+                    {% for year in years %}
+                        <li>{{ year.value }}</li>
+                    {% endfor %}
                 </ul>
                 <div id="slider-result" class="radius"><img src="/images/loading.gif"> </div>
                 <input type="hidden" id="hidden"/>
@@ -36,6 +29,9 @@
     </div>
 
     <div class="CenterLayout">
-        <div id="imagesLoad" slug="{{ miracle.slug }}" class="masonry"></div>
+        <div class="imagesBody" id="imagesLoad" slug="{{ miracle.slug }}" class="masonry"></div>
+    </div>
+    <div class="blackBackground black-80">
+        <div id="lightbox"><img class="radius" /></div>
     </div>
 {% endblock %}
