Fixes urls and views

--- a/djangodash2012/templates/base.html
+++ b/djangodash2012/templates/base.html
@@ -83,7 +83,7 @@
 <div class="clear"></div>
 <div id="footer">
     <div class="CenterLayout padding-10 black-80 radius">
-        MiraclesLive.com
+      MiraclesLive.com &copy 2012 for DjangoDash.com
     </div>
 </div><!-- #footer -->
 
