--- a/djangodash2012/templates/miracle.html
+++ b/djangodash2012/templates/miracle.html
@@ -22,7 +22,7 @@
                         <li>{{ year.value }}</li>
                     {% endfor %}
                 </ul>
-                <div id="slider-result" class="radius"><img src="/images/loading.gif"> </div>
+                <div id="slider-result" class="radius"><img src="{% static 'images/loading.gif' %}"> </div>
                 <input type="hidden" id="hidden"/>
             </div>
         </div>
