fix main page layout

--- a/djangodash2012/templates/base.html
+++ b/djangodash2012/templates/base.html
@@ -32,7 +32,7 @@
                 <div class="CenterLayout">
                     <a href="{% url core_main %}" class="logo"></a>
                     <ul class="menu">
-                        <li><a href="{% url core_main %}">Home</a></li>
+                        <!--<li><a href="{% url core_main %}">Home</a></li>-->
                         <li><a href="{% url core_about %}">About</a></li>
                         <li><a href="{% url core_rating %}">Rating</a></li>
                         <li><a href="{% url core_random %}">Random</a></li>
