add rating system

--- a/djangodash2012/templates/base.html
+++ b/djangodash2012/templates/base.html
@@ -77,7 +77,9 @@
         {% block content %}
         {% endblock %}
     </div><!-- #content-->
-
+    <div class="blackBackground black-80">
+        <div id="lightbox"><img class="radius" /></div>
+    </div>
 </div><!-- #wrapper -->
 
 <div class="clear"></div>
