--- a/djangodash2012/templates/rating.html
+++ b/djangodash2012/templates/rating.html
@@ -3,7 +3,7 @@
 {% block title %}Rating{% endblock %}
 {% block content %}
 <div class="CenterLayout padding-10">
-    <div id="mainBody" class="imagesBody">
+    <div id="ratingBody" class="imagesBody">
 	{% for image in images %}
 	      <div class="box-2 float-left">
 	                <div class="imagesPanel black-50 radius-top" style="text-align:center;">
@@ -12,8 +12,13 @@
 	                    </div>
 	                </div>
 	                <div url="{{ image.miracle.get_absolute_url }}" class="img" style="background-image:url('{{image.url}}')"></div>
-	                <div class="imagesPanel black-50" style="text-align:center;">
-	                   {{ image.title }}
+                <div class="imagesPanel black-50">
+                        <h3>{{ image.title }}</h3>
+	                    <div class="vote">
+                            <span>{{ image.rating }}</span>
+                            <a href="javascript:void(null);" alt="{{ image.id }}" class="vote_link up" type="up"></a>
+                            <a href="javascript:void(null);" alt="{{ image.id }}" class="vote_link down" type="down"></a>
+                        </div>
 	                </div>
 	            </div>
 	{% endfor %}
