--- a/djangodash2012/templates/base.html
+++ b/djangodash2012/templates/base.html
@@ -85,7 +85,7 @@
 <div class="clear"></div>
 <div id="footer">
     <div class="CenterLayout padding-10 black-80 radius">
-      MiraclesLive.com &copy 2012 for DjangoDash.com
+      MiraclesLive.com &copy 2012 for DjangoDash.com with Django, Instagram, Flickr, Google Images
     </div>
 </div><!-- #footer -->
 
