--- a/djangodash2012/templates/500.html
+++ b/djangodash2012/templates/500.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Not Finded{% endblock %}
+{% block title %}500{% endblock %}
 {% block content %}
 
     <div class="CenterLayout">
