--- a/djangodash2012/templates/miracle.html
+++ b/djangodash2012/templates/miracle.html
@@ -27,9 +27,12 @@
             </div>
         </div>
     </div>
-
+    <div class='description'>
+        <p>{{miracle.description}}</p>
+    </div>
     <div class="CenterLayout">
         <div class="imagesBody" id="imagesLoad" slug="{{ miracle.slug }}" class="masonry"></div>
     </div>
+
 
 {% endblock %}
